--- a/packages/ui/turbo/generators/templates/component.hbs
+++ b/packages/ui/turbo/generators/templates/component.hbs
@@ -1,8 +1,7 @@
-export const {{ pascalCase name }} = ({ children }: { children: React.ReactNode }) => {
-  return (
-    <div>
-      <h1>{{ pascalCase name }} Component</h1>
-      {children}
-    </div>
-  );
-};
+import { Box } from "@mui/material"
+
+export const {{ pascalCase name }} = () => {
+    return <Box>
+        Hello World!
+    </Box>
+}
